@@ -3,6 +3,7 @@ package ru.practicum.shareit.item.service;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.ItemRepository;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.UserService;
@@ -11,16 +12,16 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 public class ItemServiceImpl implements ItemService {
-    private final Map<Long, Item> items;
+    private final ItemRepository items;
     private final UserService userService;
-    private Long idCounter = 1L;
 
-    public ItemServiceImpl(UserService userService) {
-        this.items = new HashMap<>();
+    public ItemServiceImpl(UserService userService, ItemRepository items) {
+        this.items = items;
         this.userService = userService;
     }
 
@@ -35,21 +36,22 @@ public class ItemServiceImpl implements ItemService {
         validateUser(userId);
         var item = itemDto.toItem();
         item.setOwnerId(userId);
-        items.put(idCounter, item);
-        item.setId(idCounter);
-        itemDto.setId(idCounter);
-        idCounter++;
+        items.save(item);
+        itemDto.setId(item.getId());
         log.info("Item {} added", itemDto);
         return itemDto;
     }
 
     @Override
     public ItemDto updateItem(ItemDto itemDto, Long userId) {
-        if (!items.get(itemDto.getId()).getOwnerId().equals(userId)) {
+        var owner = items.findById(itemDto.getId())
+                .orElseThrow(() -> new NotFoundException("User is not found")).getOwnerId();
+        if (!owner.equals(userId)) {
             throw new NotFoundException("User is not the owner of the item");
         }
 
-        var itemFromStorage = items.get(itemDto.getId());
+        var itemFromStorage = items.findById(itemDto.getId())
+                .orElseThrow(() -> new NotFoundException("Item is not found"));
         if (itemDto.getName() != null) {
             itemFromStorage.setName(itemDto.getName());
         }
@@ -62,20 +64,23 @@ public class ItemServiceImpl implements ItemService {
             itemFromStorage.setAvailable(itemDto.getAvailable());
         }
 
+        items.save(itemFromStorage);
+
         return itemFromStorage.toItemDto();
     }
 
     @Override
     public ItemDto getItemById(Long id) {
-        return items.get(id).toItemDto();
+        return items.findById(id)
+                .orElseThrow(() -> new NotFoundException("Item is not found"))
+                .toItemDto();
     }
 
     @Override
     public List<ItemDto> getAllItemsByUserId(Long userId) {
-        return items.values().stream()
-                .filter(item -> item.getOwnerId().equals(userId))
+        return items.findAllByOwnerId(userId).stream()
                 .map(Item::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -86,14 +91,7 @@ public class ItemServiceImpl implements ItemService {
 
         String lowerText = text.toLowerCase();
 
-        return items.values().stream()
-                .filter(Item::getAvailable)
-                .filter(item -> {
-                    String name = item.getName();
-                    String description = item.getDescription();
-                    return (name != null && name.toLowerCase().contains(lowerText)) ||
-                            (description != null && description.toLowerCase().contains(lowerText));
-                })
+        return items.searchItemByNameAndDescription(text).stream()
                 .map(Item::toItemDto)
                 .toList();
     }
